--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=
-MYSQL_DB_NAME=social
+MYSQL_DB_NAME=socialmedia
 CORS_ORIGIN=http://localhost:3333,https://divine9connections.com
 API_URL = http://api.divine9connections.com
 REDIS_CONNECTION=local
